tdf#118110 - Mouse wheel should work with the shapes desk

scrollwindow removed

Change-Id: Id38dd75120effe63314fb3665417c728f3822712