svx/source/inc/DefaultShapesPanel.hxx
@@ -60,7 +60,6 @@ private:
     VclPtr<ValueSet>          mpCalloutSet;
     VclPtr<ValueSet>          mpStarSet;
     VclPtr<ValueSet>          mp3DObjectSet;
-    VclPtr<VclScrolledWindow> mpScrollWindow;
     Reference< XFrame >       mxFrame;
     std::map<VclPtr<ValueSet>, std::map<sal_uInt16, rtl::OUString>> mpShapesSetMap;
 
